class RoutesName {


  // Tab paths
  static const String homePath = '/home';
  static const String walletPath = '/wallet';
  static const String addingWorkSpacePath = '/addingWorkSpace';
  static const String budgetsPath= '/budgets';
  static const String accountPath = '/account';

  // Auth paths
  static const String homeAuthPath   = '/homeAuth';
  static const String signUpPath = 'signUp';
  static const String signInPath = 'signIn';
  static const String forgotPasswordPath = 'forgotPassword';
  static const String changePasswordPath = '/changePassword';



  // Settings paths
  static const String accountSettingsPath = 'accountSettings';

  //Transaction paths
  static const String selectWalletPath = 'selectWallet';
  static const String addNotePath = 'addNote';
  static const String pickCategoryPath = 'pickCategory';
  static const String selectParentCategoriesPath = 'selectParentCategories';
  static const String chooseRangeTimeToShowTransactionPath = 'chooseRangeTimeToShowTransaction';
  //Add new category
  static const String addNewCategoryPath = '/addNewCategory';
  static const String editCategoryPath = 'editCategory';
  static const String aiResultPath = 'aiResult';

  //All wallets_tab
  static const String allWalletsPath = 'allWallets';
  static const String addWalletsPath = '/addWallets';
  static const String pickWalletTypePath = 'pickWalletType';
  static const String pickExternalBankPath = 'pickExternalBank';


  //Acount tab
  static const String allCategoryPath = 'pickCategory';
  static const String eventPath = 'event';
  static const String createEventPath = 'createEvent';
  static const String pickIconPathForCategoryPath = 'pickIconPathForCategory';

  //Budgets
  static const String createUpdateBudgetPath = 'createUpdateBudget';
  static const String budgetDetailPath = 'budgetDetail';
  static const String groupTransactionDetailPath = 'groupTransactionDetail';

  //Home
  static const String summaryDetailPath = 'summaryDetail';
  static const String transactionHistoryDetailPath = 'transactionHistoryDetail';

  // chat
  static const String chatWithAIPath = 'chatWithAI';

}