...

  double indicatorIndex = 0;

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const ValueKey('homeAuth'),
      appBar: AppBar(
        // toolbarHeight: 80,
        backgroundColor: Theme.of(context).colorScheme.primary,
        title: SvgPicture.asset(
          Assets.svgAppLogo, width: 20, height: 20,
        ),
...
                  ),
                  const SizedBox(height: 6),
                  SizedBox(
                    width: MediaQuery.of(context).size.width,
                    height: 42,
                    child: ElevatedButton(
                      key: const ValueKey('toSignInScreen'),
                      onPressed: (){
                        context.push(FinalRoutes.signInPath);
                      },
                      child: Text('Sign in', style: TextStyle(
                        color: Theme.of(context).colorScheme.onSecondary,
                        fontWeight: FontWeight.w600
...
